Removed padding from control panel buttons to prevent oval shape on iOS

--- a/css/sass/partials/_simon.scss
+++ b/css/sass/partials/_simon.scss
@@ -270,6 +270,7 @@
 					width: 25px;
 					height: 25px;
 					margin-top: 1px;
+					padding: 0;
 
 					@media screen and (min-width: 500px) {
 						width: 30px;
@@ -351,6 +352,7 @@
 				height: 20px;
 				border-radius: 50%;
 				background: white;
+				padding: 0;
 
 				&:hover,
 				&:focus {
